horizontal scroll fix

--- a/src/component/FAQs.css
+++ b/src/component/FAQs.css
@@ -25,4 +25,7 @@
 
 .question .columns {
   padding: 42px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
